--- a/bootcamp/views/index.html
+++ b/bootcamp/views/index.html
@@ -10,6 +10,18 @@
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/CCTcafestyle.css" rel="stylesheet">
+    <script src="js/CCTcafecode.js"></script>
+     <script>
+        window.addEventListener("load", function() {
+            document.forms[1].txtBillAmt.value = calculateBill('menuTable');
+            document.querySelector("#calcBill").addEventListener("click", function() {
+                document.forms[1].txtBillAmt.value = calculateBill('menuTable');
+            });
+            document.querySelector("#showVeg").addEventListener("click", function() {
+                highlightVegetarian('menuTable', this.checked);
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -49,7 +61,7 @@
 							<option value="0">HOT BEVERAGES</option>
 							<option value="1">COLD BEVERAGES</option>
 							<option value="2">SANDWICHES</option>
-						
+                            
 						</select>
 					</div>
 					<div class="form-group">
@@ -62,6 +74,22 @@
 				</form>
                     <button id="delete" class="btn btn-block btn-danger">Delete</button>
                     <p class="text-muted">select from the from the list beside to delete an entree.</p>
+                <form>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                                                        <span class="input-group-text">&euro;</span>
+                        </div>
+                        <input type="text" class="form-control" aria-label="Total" name="txtBillAmt">
+                         <div class="input-group-append">
+                            <div class="input-group-text">
+                                <input type="checkbox" id="showVeg" aria-label="Checkbox for following text input">
+                            </div>
+                        </div>
+                        <input class="btn btn-block btn-secondary" type="button" name="btnCalcBill" value="Calculate Bill" id="calcBill">
+                    </div>
+                    
+                </form> 
+                    
 			</div>
 		</div>
 	</div>
